--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* index */
 .intro-bg{
 	
 	height: 100vh;
@@ -52,4 +53,161 @@ table {
 	margin: 0 auto;
 	width: 160px;
 	height: 120px;
+}
+/* services */
+.header{
+	width: 100%;
+	height: 76px;
+	background-color: #131415
+}
+
+@font-face {
+    font-family: 'Gora Free';
+    src: url('../fonts/gora-free-webfont.woff2') format('woff2'),
+         url('../fonts/gora-free-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Bold';
+    src: url('../fonts/opensans-bold-webfont.woff2') format('woff2'),
+         url('../fonts/opensans-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Light';
+    src: url('../fonts/opensans-light-webfont.woff2') format('woff2'),
+         url('../fonts/opensans-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Light italic';
+    src: url('../fonts/opensans-lightitalic-webfont.woff2') format('woff2'),
+         url('../fonts/opensans-lightitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotobold';
+    src: url('../fonts/roboto-bold-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.header__logo{
+	float: left;
+	padding-top:30px;
+	padding-bottom:28px;
+	padding-left: 19px;
+}
+
+.header__logo-text{
+	width: 160px;
+	height: 18px;
+	font-family: "Gora Free", Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	text-transform: uppercase;
+	letter-spacing: 1.8px;
+	color: #f89513;
+}
+
+.header__info{
+	float: right;
+	padding-right: 22px
+}
+
+.header__phone{
+	height: 18px;
+	font-family: "Open Sans", Arial, Helvetica, sans-serif;
+	font-size: 21px;
+	font-weight: 700;
+	line-height: 54px;
+	color: #ffffff;
+}
+
+.header__schedule{
+	padding-top: 6px;
+	text-align: right;
+	font-family: "Open Sans Bold", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 54px;
+	text-decoration: underline;
+	color: #ae6914;
+}
+
+.sidebar__menu-text{
+	margin-bottom:40px;
+	font-family: "Open Sans Bold", Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	line-height: 38px;
+    color: #f89513;
+	
+}
+
+.sidebar__menu-link{
+	text-decoration: none;
+}
+
+.breadcrumbs__item{
+	height: 13px;
+	opacity: 0.8;
+	color: #221f1f;
+	font-family: "Open Sans Light italic", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	line-height: 18px;
+}
+
+.services__photo-png{
+	width: 254px;
+	height: 154px;
+}
+.footer{
+	height: 77px;
+	background-color: #131415;
+}
+
+.footer__info{
+	float: left;
+	width: 257px;
+}
+.footer__info-text{
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.footer__logo-text{
+	width: 160px;
+	height: 18px;
+	font-family: "Gora Free", Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	text-transform: uppercase;
+	letter-spacing: 1.8px;
+	color: #f89513;
+}
+
+.socials{
+	float: right;
+	width: 197px;
+}
+
+.socials__title{
+	font-size: 14px;  
+	font-family: "Open Sans Bold", Arial, Helvetica, sans-serif;
+	color: #ffffff;
+}
+
+.socials__item{
+	display: inline-block;
+    width: 20px;
+    height: 20px;
+        margin-right: 8px;
 }
