--- a/css/main.css
+++ b/css/main.css
@@ -130,13 +130,28 @@ table {
 }
 
 @font-face {
-    font-family: 'robotobold';
+    font-family: 'Roboto';
     src: url('../fonts/roboto-bold-webfont.woff2') format('woff2'),
          url('../fonts/roboto-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
+
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.container{
+	width: 1060px;
+	margin: 0 auto;
+}
+
+.header{
+	margin-bottom: 46px;
+}
 .header__logo{
 	float: left;
 	padding-top:30px;
@@ -165,7 +180,12 @@ table {
 	font-size: 21px;
 	font-weight: 700;
 	line-height: 54px;
+	
+}
+
+.header__phone-num{
 	color: #ffffff;
+	text-decoration: none;
 }
 
 .header__schedule{
@@ -179,19 +199,38 @@ table {
 	color: #ae6914;
 }
 
-.sidebar__menu-text{
-	margin-bottom:40px;
-	font-family: "Open Sans Bold", Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	line-height: 38px;
-    color: #f89513;
-    text-transform: uppercase;
-	
+.breadcrumbs{
+	margin-bottom: 25px;
 }
 
-.sidebar__menu-link{
+.breadcrumbs__item{
+	display: inline-block;
+}
+
+.breadcrumbs__link{
+	font-size: 14px;
+	font-family:"Open Sans Light italic", Arial, Helvetica, sans-serif;
+	color: #fbcb9f;
+}
+
+.breadcrumbs__link_active{
+	color: #000;
 	text-decoration: none;
 }
+
+.main-section{
+	width: 870px;
+	float: right;
+	margin-left: 75px;
+}
+
+.title{
+	font-size: 49px;
+	font-family: "Roboto";
+	margin-bottom: 40px;
+}
+
+
 
 .breadcrumbs__item{
 	height: 13px;
@@ -202,13 +241,90 @@ table {
 	line-height: 18px;
 }
 
-.services__photo-png{
-	width: 254px;
-	height: 154px;
+.services__item{
+	width: 251px;
+	display: inline-block;
+	vertical-align: top;
+	margin-bottom: 51px;
+	margin-left: 25px;
+
 }
+
+.services__photo-png{
+	width: 250px;
+	height: 154px;
+	border-radius: 4px;
+	margin-bottom: 30px;
+}
+
+.services__name{
+  font-size: 18px;
+  font-family: "Open Sans Bold";
+  margin-bottom: 16px;
+ }
+
+ .services__content{
+ 	font-size: 12px;
+ 	font-family: "Open Sans Light";
+ 	line-height: 18px;
+ 	margin-right: 50px;
+}
+
+.sidebar__menu{
+	width: 105px;
+	float: right;
+}
+
+.sidebar__menu-text{
+	margin-bottom:40px;
+	font-family: "Open Sans Bold", Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	line-height: 38px;
+	letter-spacing: 2px;
+    color: #f89513;
+    text-transform: uppercase;
+
+}
+
+.sidebar__menu-link{
+	text-decoration: none;
+}
+
+.sidebar__menu-item{
+	margin-bottom: 25px;
+}
+
+.sidebar__menu-item:hover .sidebar__menu-text{
+	color: #131415;
+}
+
+.sidebar__menu-item:hover .sidebar__icon_bolt{
+
+}
+
+.sidebar__icon{
+	width: 28px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.sidebar__icon_bolt{
+	background: url(../images/icons/bolt.png) center center no-repeat;
+}
+.sidebar__icon_dumbbel{
+	background: url(../images/icons/dumbbel.png) center center no-repeat;
+}
+.sidebar__icon_star{
+		background: url(../images/icons/star.png) center center no-repeat;
+}
+
+
+
 .footer{
-	height: 77px;
+	height: 80px;
 	background-color: #131415;
+	color: #fff;
 }
 
 .footer__info{
@@ -216,7 +332,6 @@ table {
 	width: 257px;
 }
 .footer__info-text{
-    color: #ffffff;
     font-size: 14px;
     line-height: 18px;
 }
@@ -239,7 +354,7 @@ table {
 .socials__title{
 	font-size: 14px;  
 	font-family: "Open Sans Bold", Arial, Helvetica, sans-serif;
-	color: #ffffff;
+	
 }
 
 .socials__item{
