--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,8 @@ body, html{
 	height: 290px;
 }
 .intro-button{
-	width: 230px;
-	height: 57px;
     position: absolute;
+    margin-top: 15px;
 	top: 50%;
 	left: 50%;
 	margin: 115px 0 0 -115px;
@@ -49,14 +48,15 @@ body, html{
 }
 
 .intro-button__link{
-	width: 230px;
-	height: 57px;
+	width: 240px;
+	height: 65px;
 	display: block;
 	text-decoration: none;
 	font-family: "Open Sans Bold" , Arial, Helvetica, sans-serif;
 	color: #fff;
 	text-transform: uppercase;
-	line-height: 3.4;
+	line-height: 4.4;
+	letter-spacing: 3px;
 	background: #f89513;
 	border-radius: 4px;
 	text-align: center;
@@ -79,12 +79,13 @@ body, html{
 	width: 880px;
 	height: 355px;
 	background: url(../images/weightlifter.png) no-repeat;
+    margin-left: 18px;
 }
 
 .content-text{
 	position: absolute;
-	top: 160px;
-	left: 68px;
+	top: 150px;
+	left: 79px;
 	font-family: "Open Sans Bold";
 	font-size: 49px;
 	color: #fff;
@@ -93,7 +94,8 @@ body, html{
 }
 
 .description-company{
-	margin-top: 35px;
+	margin-top: 26px;
+	margin-left: 16px;
 }
 
 .description-company__text{
@@ -140,7 +142,7 @@ body, html{
 	width: 150px;
 	display: inline-block;
 	vertical-align: middle;
-	margin-bottom: 60px;
+	margin-bottom: 48px;
 	margin-right: 120px;
 }
 
@@ -202,7 +204,7 @@ body, html{
 }
 
 .description-company__text p{
-	margin-bottom: 20px;
+	margin-bottom: 14px;
 }
 
 
@@ -289,7 +291,7 @@ body, html{
 }
 
 .header__info{
-	width: 181px;
+	width: 200px;
     height: 75px;
     float: right;
     position: relative;
@@ -302,6 +304,7 @@ body, html{
 	font-weight: 700;
 	line-height: 54px;
 	display: inline-block;
+	margin-left: 30px;
 	
 }
 
@@ -318,7 +321,7 @@ body, html{
 	cursor: pointer;
 	position: relative;
 	top: 4px;
-	left: 50px;
+	left: 78px;
 	background-color: #131415;
 	text-align: right;
 	font-family: "Open Sans Bold", Arial, Helvetica, sans-serif;
@@ -347,7 +350,7 @@ body, html{
 }
 .dropdown:hover .schedule{
 	display: block;
-	left: 13px;
+	left: 33px;
 }
 
 .schedule__time{
@@ -360,8 +363,8 @@ body, html{
 
 
 .breadcrumbs{
-	margin-top: 48px;
-	margin-bottom: 25px;
+	margin-top: 40px;
+	
 }
 
 .breadcrumbs__item{
@@ -392,7 +395,7 @@ body, html{
 .main-section{
 	width: 870px;
 	float: right;
-	margin-left: 75px;
+	margin-left: 70px;
 }
 
 .title{
@@ -416,7 +419,7 @@ body, html{
 	width: 251px;
 	display: inline-block;
 	vertical-align: top;
-	margin-bottom: 51px;
+	margin-bottom: 81px;
 	margin-right: 35px;
 	
 
@@ -443,14 +446,14 @@ body, html{
 }
 
 .sidebar__menu{
-	width: 105px;
+	width: 120px;
 	float: left;
 }
 .sidebar__menu-list{
     margin: 0;
 	padding: 0;
 	list-style: none;
-	margin-top: 42px;
+	margin-top: 35px;
 }
 .sidebar__menu-text{
 	margin-bottom:40px;
@@ -474,7 +477,8 @@ body, html{
 }
 
 .sidebar__menu-item{
-	margin-bottom: 25px;
+	margin-bottom: 13px;
+	margin-left: 15px;
 
 }
 
@@ -668,12 +672,14 @@ body, html{
 
  .pagination{
  	text-align: center;
- 	margin: 10px 10px;
+ 	width: 650px;
+ 	margin: 0 auto;
  }
  .pagination__title{
  	display: inline-block;
  	font-size: 14px;
  	font-family: "Open Sans Light";
+ 	margin-right: 25px;
 }
 
 .pagination__button{
@@ -725,6 +731,8 @@ body, html{
 	background-color: #f5f5f5;
 	border-radius: 3px;
 	margin-bottom: 72px;
+	margin-left: 85px;
+	margin-top: 85px;
 	
 
 }
